<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center|center_vertical"
            android:layout_margin="20dp"
            android:contentDescription="@string/todo"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@mipmap/ic_launcher_pru_foreground" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:autofillHints="username"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1"
            android:padding="16dp"
            android:textAlignment="center"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="16dp"
            android:textAlignment="center"
            tools:ignore="VisualLintTextFieldSize" />


        <EditText
            android:id="@+id/urlEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/http_192_168_0_2_byron_componentes_tienda_json"
            android:textSize="14sp"
            android:autofillHints=""
            tools:ignore="TextFields,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/log_in" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>